--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@ __pycache__/
 # Distribution / packaging
 .Python
 build/
-develop-eggs/
+develop-eggs/   
 dist/
 downloads/
 eggs/
@@ -135,6 +135,8 @@ venv/
 ENV/
 env.bak/
 venv.bak/
+Django/
+
 
 # Spyder project settings
 .spyderproject
